--- a/oflix/templates/base.html.twig
+++ b/oflix/templates/base.html.twig
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Oflix{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+<html lang="fr">
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% block stylesheets %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/oflix.css">
         {% endblock %}
-    </head>
+    <title>Document</title>
+</head>
+
+    <header>
+            <!-- Inclusion de la navbar -->
+        {% include "partials/_navbar.html.twig" %}
+
+    </header>
+
+        <title>{% block title %}Oflix{% endblock %}</title>
+
     <body>
         {% block body %}{% endblock %}
+
+    <footer class="text-muted text-center py-5">
+        <div class="container">
+            <p class="mb-1">2021 &copy; O'flix. Tous droits réservés</p>
+        </div>
+    </footer>
+
+        {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+        {% endblock %}
     </body>
 </html>
