--- a/oflix/templates/home/home.html.twig
+++ b/oflix/templates/home/home.html.twig
@@ -21,6 +21,29 @@
             </div>
         </section>
 
+
+        {# ----------- Essai carousel BS ----------
+        <div id="slide" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+        {% for tvshow in lastTvShows %}
+
+            <div class="carousel-item active">
+            <img class="d-block w-100" src="{{ tvshow.image }}" alt="{{ tvshow.title }}">
+            </div>
+
+        {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="slide" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="slide" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        </div>
+        #}
+
         <div class="py-5 bg-light">
             <div class="container">
 
@@ -28,7 +51,7 @@
                     {% for tvshow in lastTvShows %}
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="{{ tvshow.image }}" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>{{ tvshow.title }}</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{ tvshow.title }}</text></svg>
+                            <img src="{{ tvshow.image }}" alt="{{ tvshow.title }}">
 
                             <div class="card-body">
                                 <p class="card-text">{{ tvshow.synopsis }}</p>
