--- a/oflix/templates/partials/_navbar.html.twig
+++ b/oflix/templates/partials/_navbar.html.twig
@@ -13,10 +13,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('home') }}">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tvshow_list.html">Séries</a>
+                    <a class="nav-link" href="{{ path('tvshow') }}">Séries</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ma liste</a>
