--- a/oflix/templates/tvShow/list.html.twig
+++ b/oflix/templates/tvShow/list.html.twig
@@ -24,7 +24,7 @@
                     {% for tvshow in list %}
                     <div class="col">
                         <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="{{ tvshow.image }}" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>{{ tvshow.title }}</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{ tvshow.title }}</text></svg>
+                            <img src="{{ tvshow.image }}" alt="{{ tvshow.title }}">
 
                             <div class="card-body">
                                 <p class="card-text">{{ tvshow.synopsis }}</p>
