--- a/oflix/templates/tv_show/index.html.twig
+++ b/oflix/templates/tv_show/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title %}
     Liste des séries - {{ parent() }}
@@ -30,7 +30,7 @@
                                 <p class="card-text">{{ tvshow.synopsis }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="{{path('singletvshow', {id:tvshow.id})}}" class="btn btn-sm btn-outline-secondary">Voir</a>
+                                        <a href="{{path('tvshow_show', {id:tvshow.id})}}" class="btn btn-sm btn-outline-secondary">Voir</a>
                                         <a href="tvshow_details.html" class="btn btn-sm btn-outline-secondary">Editer</a>
                                     </div>
                                     <small class="text-muted">
@@ -50,3 +50,4 @@
 
     </main>
 {% endblock %}
+
