--- a/oflix/templates/tv_show/show.html.twig
+++ b/oflix/templates/tv_show/show.html.twig
@@ -20,7 +20,7 @@
                     <p class="lead text-muted">
                         Avec : 
                         {% for character in tvshow.characters %}
-                            <a href="#">{{ character.firstname }} {{ character.lastname }}</a>, 
+                            <a href="#">{{ character.firstname }} {{ character.lastname }}</a> 
                         {% endfor %}
                     </p>
                     <p class="lead text-muted">
