--- a/oflix/templates/base.html.twig
+++ b/oflix/templates/base.html.twig
@@ -5,24 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        {% block title %}
+            O'flix
+            {% endblock %}
+    </title>
         {% block stylesheets %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/oflix.css">
+    <link rel="stylesheet" href="{{ asset('css/oflix.css') }}">
         {% endblock %}
-    <title>Document</title>
 </head>
 
-    <header>
+    <body>
             <!-- Inclusion de la navbar -->
         {% include "partials/_navbar.html.twig" %}
 
-    </header>
-
-        <title>{% block title %}Oflix{% endblock %}</title>
-
-    <body>
         {% block body %}{% endblock %}
-
+    
     <footer class="text-muted text-center py-5">
         <div class="container">
             <p class="mb-1">2021 &copy; O'flix. Tous droits réservés</p>
