--- a/oflix/templates/partials/_navbar.html.twig
+++ b/oflix/templates/partials/_navbar.html.twig
@@ -28,8 +28,8 @@
                         <a class="btn btn-danger" aria-current="page" href="login.html">Se connecter</a>
                     </li>
                 </ul>
-                <form class="d-flex m">
-                    <input class="form-control me-2" type="search" placeholder="Ex : The mandalorian" aria-label="Search">
+                <form class="d-flex m" action="{{ path('search_index') }}">
+                    <input class="form-control me-2" type="search" placeholder="Ex : The mandalorian" aria-label="Search" name="search">
                     <button class="btn btn-outline-secondary" type="submit">GO</button>
                 </form>
             </div>
