--- a/oflix/templates/backoffice/category/index.html.twig
+++ b/oflix/templates/backoffice/category/index.html.twig
@@ -3,18 +3,14 @@
 {% block title %}Hello CategoryController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<main>
+       
+    <h1 class="fw-light">Catégories</h1>
+        <ul>
+        {% for category in categories %}
+            <li>{{ category.name }}</li>    
+        {% endfor %}
+        </ul>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Spé Symfony/S02/symfony-oflix-morganealemany/oflix/src/Controller/Backoffice/CategoryController.php'|file_link(0) }}">src/Controller/Backoffice/CategoryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Spé Symfony/S02/symfony-oflix-morganealemany/oflix/templates/backoffice/category/index.html.twig'|file_link(0) }}">templates/backoffice/category/index.html.twig</a></code></li>
-    </ul>
-</div>
+</main>
 {% endblock %}
