--- a/oflix/templates/backoffice/character/index.html.twig
+++ b/oflix/templates/backoffice/character/index.html.twig
@@ -1,20 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CharacterController!{% endblock %}
+{% block title %}Hello CategoryController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<main>
+       
+    <h1 class="fw-light">Personnages</h1>
+        <ul>
+        {% for character in characters %}
+            <li>{{ character.firstname }} {{ character.lastname }}</li>    
+        {% endfor %}
+        </ul>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Spé Symfony/S02/symfony-oflix-morganealemany/oflix/src/Controller/Backoffice/CharacterController.php'|file_link(0) }}">src/Controller/Backoffice/CharacterController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Spé Symfony/S02/symfony-oflix-morganealemany/oflix/templates/backoffice/character/index.html.twig'|file_link(0) }}">templates/backoffice/character/index.html.twig</a></code></li>
-    </ul>
-</div>
+</main>
 {% endblock %}
