--- a/oflix/templates/base.html.twig
+++ b/oflix/templates/base.html.twig
@@ -19,7 +19,7 @@
     <body>
             <!-- Inclusion de la navbar -->
         {% include "partials/_navbar.html.twig" %}
-
+        {% include "partials/_flash.html.twig" %}
         {% block body %}{% endblock %}
     
     <footer class="text-muted text-center py-5">
