Ajout sécurité sur les formulaires add character et category

--- a/oflix/templates/backoffice/category/index.html.twig
+++ b/oflix/templates/backoffice/category/index.html.twig
@@ -10,7 +10,7 @@
     <section>
         <ul>
         {% for category in categories %}
-            <li>{{ category.name }}</li>    
+            <li><a href="{{ path('backoffice_category_show', {id: category.id})}}">{{ category.name }}</a></li>    
         {% endfor %}
         </ul>
     </section>
