--- a/oflix/templates/backoffice/category/add.html.twig
+++ b/oflix/templates/backoffice/category/add.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h1>Ajouter une catégorie</h1>
-{{ form_start(formView) }}
+{{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_row(formView.name) }}
     <button class="btn btn-primary">Valider</button>
 {{ form_end(formView) }}
