--- a/oflix/templates/backoffice/category/show.html.twig
+++ b/oflix/templates/backoffice/category/show.html.twig
@@ -2,6 +2,10 @@
 
 {% block body %}
 <h1>{{ category.name }} </h1>
-  
-    
+<p>
+    <a href="{{ path('backoffice_category_edit', {id: category.id})}}">Editer</a>
+</p>
+<p>
+    <a href="{{ path('backoffice_category_index') }}">Retour à la liste des catégories</a>
+ </p>
 {% endblock %}
