--- a/oflix/templates/backoffice/character/show.html.twig
+++ b/oflix/templates/backoffice/character/show.html.twig
@@ -2,10 +2,19 @@
 
 {% block body %}
 <h1>{{ character.firstname }} {{ character.lastname}}</h1>
+<p>
+    <a href="{{ path('backoffice_character_edit', {id: character.id})}}">Editer</a>
+</p>
+
     <h3>Age</h3>
         <p>{{ character.age }}</p>
     <h3>Genre</h3>
         <p>{{ character.gender }}</p>
     <h3>Biographie</h3>
         <p>{{ character.bio }}</p>
+
+<p>
+    <a href="{{ path('backoffice_character_index') }}">Retour à la liste des personnages</a>
+ </p>
+
 {% endblock %}
