Ajout des routes delete pour character et category

--- a/oflix/templates/backoffice/category/show.html.twig
+++ b/oflix/templates/backoffice/category/show.html.twig
@@ -5,6 +5,11 @@
 <p>
     <a href="{{ path('backoffice_category_edit', {id: category.id})}}">Editer</a>
 </p>
+
+<p>
+    <a href="{{ path('backoffice_category_delete', {id: category.id})}}">Supprimer</a>
+</p>
+
 <p>
     <a href="{{ path('backoffice_category_index') }}">Retour à la liste des catégories</a>
  </p>
