--- a/oflix/templates/backoffice/character/show.html.twig
+++ b/oflix/templates/backoffice/character/show.html.twig
@@ -6,6 +6,11 @@
     <a href="{{ path('backoffice_character_edit', {id: character.id})}}">Editer</a>
 </p>
 
+<p>
+    <a href="{{ path('backoffice_character_delete', {id: character.id})}}">Supprimer</a>
+</p>
+
+
     <h3>Age</h3>
         <p>{{ character.age }}</p>
     <h3>Genre</h3>
