--- a/oflix/templates/partials/_navbar.html.twig
+++ b/oflix/templates/partials/_navbar.html.twig
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Ma liste</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Backoffice</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav me-4 mb-md-0">
                     <li class="nav-item">
