--- a/oflix/templates/backoffice/character/show.html.twig
+++ b/oflix/templates/backoffice/character/show.html.twig
@@ -2,13 +2,6 @@
 
 {% block body %}
 <h1>{{ character.firstname }} {{ character.lastname}}</h1>
-<p>
-    <a href="{{ path('backoffice_character_edit', {id: character.id})}}">Editer</a>
-</p>
-
-<p>
-    <a href="{{ path('backoffice_character_delete', {id: character.id})}}">Supprimer</a>
-</p>
 
 
     <h3>Age</h3>
@@ -19,7 +12,13 @@
         <p>{{ character.bio }}</p>
 
 <p>
-    <a href="{{ path('backoffice_character_index') }}">Retour à la liste des personnages</a>
+    <a class="btn btn-success" href="{{ path('backoffice_character_edit', {id: character.id})}}">Editer</a>
+</p>
+<p>
+    <a class="btn btn-danger" href="{{ path('backoffice_character_delete', {id: character.id})}}">Supprimer</a>
+</p>
+<p>
+    <a class="btn btn-primary" href="{{ path('backoffice_character_index') }}">Retour à la liste</a>
  </p>
 
 {% endblock %}
