--- a/oflix/templates/backoffice/character/index.html.twig
+++ b/oflix/templates/backoffice/character/index.html.twig
@@ -3,16 +3,48 @@
 {% block title %}Hello CategoryController!{% endblock %}
 
 {% block body %}
-<main>
-       
-    <h1 class="fw-light">Personnages</h1>
-        <a href="{{ path('backoffice_character_add')}}">Ajouter un nouveau personnage</a>
 
-        <ul>
+<h1>Liste des personnages</h1>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Prénom</th>
+                <th>Nom</th>
+                <th>Genre</th>
+                <th>Age</th>
+                <th>Biographie</th>
+                <th>Date de création</th>
+                <th>Dernière mise à jour</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
         {% for character in characters %}
-            <li><a href="{{ path('backoffice_character_show', {id: character.id })}}">{{ character.firstname }} {{ character.lastname }}</a></li>    
-        {% endfor %}
-        </ul>
+            <tr>
+                <td>{{ character.id }}</td>
+                <td>{{ character.firstname }}</td>
+                <td>{{ character.lastname }}</td>
+                <td>{{ character.gender }}</td>
+                <td>{{ character.age }}</td>
+                <td>{{ character.bio }}</td>
+                <td>{{ character.createdAt ? character.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ character.updatedAt ? character.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('backoffice_character_show', {'id': character.id}) }}">Voir</a>
+                    <a href="{{ path('backoffice_character_edit', {'id': character.id}) }}">Editer</a>
+                    <a href="{{ path('backoffice_character_delete', {'id': character.id}) }}">Supprimer</a>
 
-</main>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="9">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('backoffice_tv_show_new') }}">Ajouter</a>
 {% endblock %}
