--- a/oflix/templates/backoffice/category/index.html.twig
+++ b/oflix/templates/backoffice/category/index.html.twig
@@ -6,6 +6,7 @@
 
 <h1>Liste des catégories</h1>
 
+    <a class="btn btn-primary" href="{{ path('backoffice_category_add')}}">Ajouter une catégorie</a>
     <table class="table">
         <thead>
             <tr>
@@ -36,6 +37,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('backoffice_category_add')}}">Create new</a>
 
 {% endblock %}
