--- a/oflix/templates/backoffice/character/index.html.twig
+++ b/oflix/templates/backoffice/character/index.html.twig
@@ -6,6 +6,7 @@
 
 <h1>Liste des personnages</h1>
 
+    <a class="btn btn-primary" href="{{ path('backoffice_tv_show_new') }}">Ajouter un personnage</a>
     <table class="table">
         <thead>
             <tr>
@@ -46,5 +47,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('backoffice_tv_show_new') }}">Ajouter</a>
 {% endblock %}
