--- a/oflix/templates/backoffice/tv_show/new.html.twig
+++ b/oflix/templates/backoffice/tv_show/new.html.twig
@@ -3,9 +3,12 @@
 {% block title %}New TvShow{% endblock %}
 
 {% block body %}
-    <h1>Create new TvShow</h1>
 
-    {{ include('backoffice/tv_show/_form.html.twig') }}
+<main style="margin:100px">
+    <h1>Ajouter une série</h1>
 
-    <a href="{{ path('backoffice_tv_show_index') }}">back to list</a>
+    <p>{{ include('backoffice/tv_show/_form.html.twig') }}</p>
+
+    <p><a class="btn btn-primary" href="{{ path('backoffice_tv_show_index') }}">Revenir à la liste</a></p>
+</main>
 {% endblock %}
