--- a/oflix/templates/partials/_navbar.html.twig
+++ b/oflix/templates/partials/_navbar.html.twig
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="#">Ma liste</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Backoffice</a>
+                        <a class="nav-link" href="{{ path('backoffice')}}">Backoffice</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav me-4 mb-md-0">
