--- a/oflix/templates/backoffice/category/edit.html.twig
+++ b/oflix/templates/backoffice/category/edit.html.twig
@@ -1,11 +1,15 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+
+<main style="margin:100px">
 <h1>Editer la catégorie {{ category.name }}</h1>
+
 {{ form_start(formView) }}
     {{ form_row(formView.name) }}
     <p><button class="btn btn-success">Valider</button></p>
 {{ form_end(formView) }}
+
 <p><a class="btn btn-danger" href="{{ path('backoffice_category_delete', {id: category.id}) }}">Supprimer</a></p>
 
 <p><a class="btn btn-primary" href="{{ path('backoffice_category_index') }}">Revenir à la liste</a></p>
