--- a/oflix/templates/backoffice/character/add.html.twig
+++ b/oflix/templates/backoffice/character/add.html.twig
@@ -1,13 +1,19 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-<h1>Ajouter un personnage</h1>
-{{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
-    {{ form_row(formView.firstname) }}
-    {{ form_row(formView.lastname) }}
-    {{ form_row(formView.age) }}
-    {{ form_row(formView.gender) }}
-    {{ form_row(formView.bio) }}
-    <button class="btn btn-primary">Valider</button>
-{{ form_end(formView) }}
+
+<main style="margin:100px">
+    <h1>Ajouter un personnage</h1>
+    {{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_row(formView.firstname) }}
+        {{ form_row(formView.lastname) }}
+        {{ form_row(formView.age) }}
+        {{ form_row(formView.gender) }}
+        {{ form_row(formView.bio) }}
+        <p><button class="btn btn-success">Valider</button></p>
+    {{ form_end(formView) }}
+
+    <p><a class="btn btn-primary" href="{{ path('backoffice_character_index') }}">Revenir à la liste</a></p>
+
+</main>
 {% endblock %}
