--- a/oflix/templates/backoffice/character/show.html.twig
+++ b/oflix/templates/backoffice/character/show.html.twig
@@ -1,8 +1,9 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-<h1>{{ character.firstname }} {{ character.lastname}}</h1>
 
+<main style="margin:100px">
+<h1>{{ character.firstname }} {{ character.lastname}}</h1>
 
     <h3>Age</h3>
         <p>{{ character.age }}</p>
