Ajout héritage de templates twig pour gérer un layout différent pour le site et pour le backoffice

--- a/oflix/templates/backoffice/character/show.html.twig
+++ b/oflix/templates/backoffice/character/show.html.twig
@@ -1,6 +1,6 @@
-{% extends "base.html.twig" %}
+{% extends 'backoffice/layout.html.twig' %}
 
-{% block body %}
+{% block content %}
 
 <main style="margin:100px">
 <h1>{{ character.firstname }} {{ character.lastname}}</h1>
