--- a/oflix/templates/backoffice/index.html.twig
+++ b/oflix/templates/backoffice/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BackofficeController!{% endblock %}
+{% block title %}Backoffice - {{ parent() }}{% endblock %}
 
 {% block body %}
 <main style="margin:100px">
