--- a/oflix/templates/backoffice/category/edit.html.twig
+++ b/oflix/templates/backoffice/category/edit.html.twig
@@ -1,6 +1,6 @@
-{% extends "base.html.twig" %}
+{% extends 'backoffice/layout.html.twig' %}
 
-{% block body %}
+{% block content %}
 
 <main style="margin:100px">
 <h1>Editer la catégorie {{ category.name }}</h1>
