--- a/oflix/templates/backoffice/category/index.html.twig
+++ b/oflix/templates/backoffice/category/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'backoffice/layout.html.twig' %}
 
-{% block title %}Hello CategoryController!{% endblock %}
+{% block title %}Index catégories - {{ parent() }}{% endblock %}
 
-{% block body %}
+{% block content %}
 
 <main style="margin:100px">
 <h1>Liste des catégories</h1>
