--- a/oflix/templates/backoffice/character/add.html.twig
+++ b/oflix/templates/backoffice/character/add.html.twig
@@ -1,6 +1,6 @@
-{% extends "base.html.twig" %}
+{% extends 'backoffice/layout.html.twig' %}
 
-{% block body %}
+{% block content %}
 
 <main style="margin:100px">
     <h1>Ajouter un personnage</h1>
