--- a/oflix/templates/backoffice/tv_show/index.html.twig
+++ b/oflix/templates/backoffice/tv_show/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'backoffice/layout.html.twig' %}
 
-{% block title %}TvShow index{% endblock %}
+{% block title %}Index séries - {{ parent() }}{% endblock %}
 
-{% block body %}
+{% block content %}
 
 <main style="margin:100px">
     <h1>Liste des séries</h1>
