--- a/oflix/templates/backoffice/tv_show/show.html.twig
+++ b/oflix/templates/backoffice/tv_show/show.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'backoffice/layout.html.twig' %}
 
 {% block title %}TvShow{% endblock %}
 
-{% block body %}
+{% block content %}
 <main style="margin:100px">
     <h1>TvShow</h1>
 
