--- a/oflix/templates/backoffice/category/add.html.twig
+++ b/oflix/templates/backoffice/category/add.html.twig
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-<main style="margin:100px">
     <h1>Ajouter une catégorie</h1>
-    {{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
-        {{ form_row(formView.name) }}
-        <p><button class="btn btn-success">Valider</button></p>
-    {{ form_end(formView) }}
 
-    <p><a class="btn btn-primary" href="{{ path('backoffice_category_index') }}">Revenir à la liste</a></p>
-</main>
+        {{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
+            {{ form_row(formView.name) }}
+            <p><button class="btn btn-success">Valider</button></p>
+        {{ form_end(formView) }}
+
+    <p><a class="btn btn-primary" href="{{ path('backoffice_category_index') }}">
+    Revenir à la liste
+    </a></p>
 {% endblock %}
