--- a/oflix/templates/backoffice/category/index.html.twig
+++ b/oflix/templates/backoffice/category/index.html.twig
@@ -4,7 +4,6 @@
 
 {% block content %}
 
-<main style="margin:100px">
 <h1>Liste des catégories</h1>
 
     <p><a class="btn btn-primary" href="{{ path('backoffice_category_add')}}">Ajouter une catégorie</a></p>
@@ -23,11 +22,12 @@
             <tr>
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
-                <td>{{ category.createdAt ? category.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ category.updatedAt ? category.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ category.createdAt ? category.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+                <td>{{ category.updatedAt ? category.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
                 <td>
+                    <a href="{{ path('backoffice_category_show', {'id': category.id}) }}">Voir</a>
                     <a href="{{ path('backoffice_category_edit', {'id': category.id}) }}">Editer</a>
-                    <a href="{{ path('backoffice_category_delete', {'id': category.id}) }}">Supprimer</a>
+                    <a href="{{ path('backoffice_category_delete', {'id': category.id}) }}" onclick="return confirm('Êtes vous sûr de vouloir supprimer cet élément?');">Supprimer</a>
                 </td>
             </tr>
         {% else %}
@@ -37,6 +37,5 @@
         {% endfor %}
         </tbody>
     </table>
-</main>
 
 {% endblock %}
