--- a/oflix/templates/backoffice/character/add.html.twig
+++ b/oflix/templates/backoffice/character/add.html.twig
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-<main style="margin:100px">
     <h1>Ajouter un personnage</h1>
     {{ form_start(formView, {'attr': {'novalidate': 'novalidate'}}) }}
         {{ form_row(formView.firstname) }}
@@ -10,10 +9,11 @@
         {{ form_row(formView.age) }}
         {{ form_row(formView.gender) }}
         {{ form_row(formView.bio) }}
+        {{ form_row(formView.imageFile) }}
+
         <p><button class="btn btn-success">Valider</button></p>
     {{ form_end(formView) }}
 
     <p><a class="btn btn-primary" href="{{ path('backoffice_character_index') }}">Revenir à la liste</a></p>
 
-</main>
 {% endblock %}
