--- a/oflix/templates/backoffice/character/edit.html.twig
+++ b/oflix/templates/backoffice/character/edit.html.twig
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-<main style="margin:100px">
 <h1>Editer le personnage {{ character.firstname }} {{ character.lastname }}</h1>
 
 {{ form_start(formView) }}
@@ -14,8 +13,7 @@
     <p><button class="btn btn-success">Valider</button></p>
 {{ form_end(formView) }}
 
-    <p><a class="btn btn-danger" href="{{ path('backoffice_character_delete', {id: character.id}) }}">Supprimer</a></p>
+    <p><a class="btn btn-danger" href="{{ path('backoffice_character_delete', {id: character.id}) }}" onclick="return confirm('Êtes vous sûr de vouloir supprimer cet élément?');">Supprimer</a></p>
 
     <p><a class="btn btn-primary" href="{{ path('backoffice_character_index') }}">Revenir à la liste</a></p>
-</main>
 {% endblock %}
