--- a/oflix/templates/backoffice/layout.html.twig
+++ b/oflix/templates/backoffice/layout.html.twig
@@ -4,18 +4,17 @@
 
 {% block body %}
 
-<section class="row">
+<section class="row m-3">
     <!-- Menu de navigation -->
     <div class="col-2">
-
-        <h2>Administration</h2>
+    
         <div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
             <a href="{{ path('backoffice')}}" class="btn btn-primary">Accueil</a>
             <a href="{{ path('backoffice_tv_show_index')}}" class="btn btn-primary">Séries</a>
             <a href="{{ path('backoffice_category_index')}}" class="btn btn-primary">Catégories</a>
             <a href="{{ path('backoffice_character_index')}}" class="btn btn-primary">Personnages</a>
 
-            <div class="btn-group" role="group">
+            {# <div class="btn-group" role="group">
                 <a id="btnGroupDrop1" href="" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
                 </a>
@@ -27,7 +26,7 @@
                         <a class="dropdown-item" href="#">Dropdown link</a>
                     </li>
                 </ul>
-            </div>
+            </div> #}
         </div>
     </div>
 
