--- a/oflix/templates/partials/_navbar.html.twig
+++ b/oflix/templates/partials/_navbar.html.twig
@@ -28,7 +28,13 @@
                 </ul>
                 <ul class="navbar-nav me-4 mb-md-0">
                     <li class="nav-item">
-                        <a class="btn btn-danger" aria-current="page" href="login.html">Se connecter</a>
+                    {% if app.user %}
+                        <a class="btn btn-danger" aria-current="page" href="{{ path('app_logout')}}">Se déconnecter</a>
+                    {% else %}
+                        <a class="btn btn-danger" aria-current="page" href="{{ path('app_login')}}">Se connecter</a>
+        
+                    {% endif %}
+                    
                     </li>
                 </ul>
                 <form class="d-flex m" action="{{ path('search_index') }}">
