Ajout de l'email de l'utilisateur lorsque connecté sur la page d'accueil du backoffice

--- a/oflix/templates/backoffice/index.html.twig
+++ b/oflix/templates/backoffice/index.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Backoffice - {{ parent() }}{% endblock %}
 
 {% block body %}
+{% if app.user %}
+<h2>Bonjour {{app.user.email}}</h2>
+{% endif %}
+
+
 <main style="margin:100px">
     <div class="row">
     <div class="col-sm-4">
