--- a/oflix/templates/backoffice/index.html.twig
+++ b/oflix/templates/backoffice/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Backoffice - {{ parent() }}{% endblock %}
-
 {% block body %}
 {% if app.user %}
-<h2>Bonjour {{app.user.email}}</h2>
+{% set currentRoute = app.request.get('_route') %}
+<h2>Bonjour {{ app.user.email }}</h2>
+
 {% endif %}
 
 
