--- a/oflix/templates/home/index.html.twig
+++ b/oflix/templates/home/index.html.twig
@@ -14,8 +14,12 @@
                     <h1 class="fw-light">Séries TV et bien plus en illimité.</h1>
                     <p class="lead text-muted">Où que vous soyez. Annulez à tout moment.</p>
                     <p>
-                        <a href="login.html" class="btn btn-danger my-2">Se connecter</a>
-                        <a href="#" class="btn btn-secondary my-2">Créer un compte</a>
+                    {% if app.user %}
+                        Bienvenue {{ app.user.email}}
+                    {% else %}
+                        <a href="{{ path('app_login')}}" class="btn btn-danger my-2">Se connecter</a>
+                        <a href="{{ path('app_register')}}" class="btn btn-secondary my-2">Créer un compte</a>
+                    {% endif %}
                     </p>
                 </div>
             </div>
