--- a/oflix/templates/user/edit.html.twig
+++ b/oflix/templates/user/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier l'utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+    <h1>Modifier l'utilisateur</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('user_index') }}">Retour à la liste</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
