--- a/oflix/templates/backoffice/character/add.html.twig
+++ b/oflix/templates/backoffice/character/add.html.twig
@@ -9,7 +9,7 @@
         {{ form_row(formView.age) }}
         {{ form_row(formView.gender) }}
         {{ form_row(formView.bio) }}
-        {{ form_row(formView.imageFile) }}
+        {{ form_row(formView.imgUpload) }}
 
         <p><button class="btn btn-success">Valider</button></p>
     {{ form_end(formView) }}
