Ajout du service d'ajout d'image en edition + dynamisation de l'affichage des images dans l'index et le détail de tvshow

--- a/oflix/templates/backoffice/tv_show/show.html.twig
+++ b/oflix/templates/backoffice/tv_show/show.html.twig
@@ -3,8 +3,7 @@
 {% block title %}TvShow{% endblock %}
 
 {% block content %}
-    <h1>TvShow</h1>
-
+<img src="{{ asset('uploads/' ~ tv_show.image)}}" width= 500 alt="Image de la série {{ tv_show.title }}">
     <table class="table">
         <tbody>
             <tr>
