--- a/oflix/templates/backoffice/tv_show/index.html.twig
+++ b/oflix/templates/backoffice/tv_show/index.html.twig
@@ -16,7 +16,7 @@
                 <th>Image</th>
                 <th>NbLikes</th>
                 <th>Date de publication</th>
-                <th>Date de création</th>
+                <th>Image</th>
                 <th>Dernière mise à jour</th>
                 <th>Actions</th>
             </tr>
@@ -30,7 +30,9 @@
                 <td>{{ tv_show.image }}</td>
                 <td>{{ tv_show.nbLikes }}</td>
                 <td>{{ tv_show.publishedAt ? tv_show.publishedAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>{{ tv_show.createdAt ? tv_show.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+                    <td>
+                        <img src="{{ asset('uploads/' ~ tv_show.image)}}" width=100 alt="image de la série {{ tv_show.title }}">
+                    </td>
                 <td>{{ tv_show.updatedAt ? tv_show.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
                 <td>
                     <a href="{{ path('backoffice_tv_show_show', {'id': tv_show.id}) }}">Voir</a>
