--- a/oflix/templates/tv_show/show.html.twig
+++ b/oflix/templates/tv_show/show.html.twig
@@ -11,7 +11,7 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <img src="{{ tvshow.image }}" alt="" height="400">
+                    <img src="{{ asset('uploads/' ~ tvshow.image) }}" width= 500 alt="{{ tvshow.title }}">
                     <p class="lead text-muted">
                         {% for season in tvshow.seasons %}
                         <a href="#"><span class="badge bg-info">Saison {{ season.seasonNumber }}</span></a>
