--- a/oflix/templates/backoffice/tv_show/show.html.twig
+++ b/oflix/templates/backoffice/tv_show/show.html.twig
@@ -3,7 +3,31 @@
 {% block title %}TvShow{% endblock %}
 
 {% block content %}
-<img src="{{ asset('uploads/' ~ tv_show.image)}}" width= 500 alt="Image de la série {{ tv_show.title }}">
+
+
+
+<div class= "d-flex justify-content-center">
+    <div class="card text-center" style="width: 25rem;">
+    <img src="{{ asset('uploads/' ~ tv_show.image)}}" class="card-img-top" alt="Image de la série {{ tv_show.title }}">
+    <div class="card-body">
+        <h5 class="card-title">{{ tv_show.title }}</h5>
+        <p class="card-text">{{ tv_show.synopsis }}</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Likes : {{ tv_show.nbLikes }}</li>
+        <li class="list-group-item">Date de publication : {{ tv_show.publishedAt ? tv_show.publishedAt|date('d-m-Y') : '' }}</li>
+    </ul>
+    <div class="card-body">
+        <a class="btn btn-success card-link" href="{{ path('backoffice_tv_show_edit', {id: tv_show.id})}}">Editer</a>    
+        <a class="btn btn-danger card-link" href="{{ path('backoffice_tv_show_delete', {id: tv_show.id})}}" onclick="return confirm('Êtes vous sûr de vouloir supprimer cet élément?');">Supprimer</a>
+        <a class="btn btn-primary card-link" href="{{ path('backoffice_tv_show_index') }}">Retour à la liste</a>
+    </div>
+    </div>
+</div>
+
+
+
+    {# <img src="{{ asset('uploads/' ~ tv_show.image)}}" width= 500 alt="Image de la série {{ tv_show.title }}">
     <table class="table">
         <tbody>
             <tr>
@@ -46,5 +70,5 @@
 
     <p>{{ include('backoffice/tv_show/_delete_form.html.twig') }}</p>
 
-    <p><a class="btn btn-primary" href="{{ path('backoffice_tv_show_index') }}">Revenir à la liste</a></p>
+    <p><a class="btn btn-primary" href="{{ path('backoffice_tv_show_index') }}">Revenir à la liste</a></p> #}
 {% endblock %}
