--- a/oflix/templates/home/index.html.twig
+++ b/oflix/templates/home/index.html.twig
@@ -54,14 +54,13 @@
                     {% for tvshow in lastTvShows %}
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="{{ tvshow.image }}" alt="{{ tvshow.title }}">
-
+                            <img src="{{ asset('uploads/' ~ tvshow.image) }}" alt="{{ tvshow.title }}">
                             <div class="card-body">
                                 <p class="card-text">{{ tvshow.synopsis }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="{{path('tvshow_show', {id: tvshow.id })}}" class="btn btn-sm btn-outline-secondary">Voir</a>
-                                        <a href="tvshow_details.html" class="btn btn-sm btn-outline-secondary">Editer</a>
+                                        <a href="{{path('backoffice_tv_show_edit', {id: tvshow.id })}}" class="btn btn-sm btn-outline-secondary">Editer</a>
                                     </div>
                                     <small class="text-muted">
                                         {{ tvshow.nbLikes }}
