--- a/oflix/templates/tv_show/index.html.twig
+++ b/oflix/templates/tv_show/index.html.twig
@@ -24,7 +24,7 @@
                     {% for tvshow in list %}
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="{{ asset('uploads/' ~ tvshow.image) }}" alt="{{ tvshow.title }}">
+                            <img src="{{tvshow.image }}" alt="{{ tvshow.title }}">
                             <div class="card-body">
                                 <p class="card-text">{{ tvshow.synopsis }}</p>
                                 <div class="d-flex justify-content-between align-items-center">
